unpackaged/main/default/objects/nbavs__ServicePresenceGroupUnsyncedUser__c/nbavs__ServicePresenceGroupUnsyncedUser__c.object-meta.xml
<CustomObject>
    <label>Service Presence Group Unsynced User</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Presence Group Unsynced Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>