unpackaged/main/default/objects/nbavs__ServicePresenceGroupUnsyncedUser__c/fields/nbavs__LoggedIn__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LoggedIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logged In</label>
    <type>Checkbox</type>
</CustomField>