unpackaged/main/default/objects/nbavs__ServicePresenceGroupUnsyncedUser__c/fields/nbavs__ServiceStatusId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ServiceStatusId__c</fullName>
    <description>Omni-Channel User Status ID or &#39;offline&#39; if user offline from Omni-Channel</description>
    <label>Service Status ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>