unpackaged/main/default/objects/nbavs__ServicePresenceGroupUnsyncedUser__c/fields/nbavs__UserId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__UserId__c</fullName>
    <label>User ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>